More Keys import traceback was missing in factory
git-svn-id: svn://svn.freevo.org/kaa/trunk@172 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/i18n/aviinfo/en.po
+++ b/mmpython/i18n/aviinfo/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mmpython aviinfo\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2003-07-02 10:23+0100\n"
+"PO-Revision-Date: 2003-07-02 11:30+0100\n"
 "Last-Translator: Thomas Schüppel <stain@cs.tu-berlin.de>\n"
 "Language-Team: Thomas Schueppel <stain@cs.tu-berlin.de>\n"
 "MIME-Version: 1.0\n"
@@ -142,7 +142,7 @@ msgid "ICMS"
 msgstr "Commissioned by"
 
 msgid "IENG"
-msgstr "Engineerr"
+msgstr "Engineer"
 
 msgid "ICRP"
 msgstr "Cropped"
