some fields added
git-svn-id: svn://svn.freevo.org/kaa/trunk@176 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/i18n/qtudta/en.po
+++ b/mmpython/i18n/qtudta/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mmpython\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2003-07-02 13:30+0100\n"
+"PO-Revision-Date: 2003-07-02 13:35+0100\n"
 "Last-Translator: Thomas Schüppel <stain@cs.tu-berlin.de>\n"
 "Language-Team: Thomas Schüppel <stain@cs.tu-berlin.de>\n"
 "MIME-Version: 1.0\n"
@@ -12,6 +12,12 @@ msgstr ""
 # Copyright statement.
 msgid "cpy"
 msgstr "Copyright"
+
+msgid "aut"
+msgstr "Author"
+
+msgid "nam"
+msgstr "Title"
 
 # Date the movie content was created.
 msgid "day"
