--- a/mmpython/i18n/qtudta/qtudta.pot
+++ b/mmpython/i18n/qtudta/qtudta.pot
@@ -9,8 +9,13 @@
 
 msgid "cpy"
 msgstr "Copyright statement"
-                                 
-# 
+
+msgid "aut"
+msgstr "Author"
+
+msgid "nam"
+msgstr "Title"
+
 msgid "day"
 msgstr "Date the movie content was created"
 
