Switch to Python 2.3 by default, and byte compile the module on installation instead of first use.
git-svn-id: svn://svn.freevo.org/kaa/trunk@212 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/debian/changelog
+++ b/mmpython/debian/changelog
@@ -1,3 +1,15 @@
+python2.3-mmpython (0.0.1cvs20030731-freevo1) unstable; urgency=low
+
+  * Added postinst script
+
+ -- Aubin Paul <debian@outlyer.org>  Thu, 31 Jul 2003 12:15:24 -0400
+
+python2.3-mmpython (0.0.1cvs20030729-freevo1) unstable; urgency=low
+
+  * First revision for python 2.3
+
+ -- Aubin Paul <debian@outlyer.org>  Tue, 29 Jul 2003 23:26:06 -0400
+
 python2.2-mmpython (0.0.1cvs20030710-freevo3) unstable; urgency=low
 
   * New snapshot with Ogg fixes
