Should keep this up to date in CVS
git-svn-id: svn://svn.freevo.org/kaa/trunk@222 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/debian/changelog
+++ b/mmpython/debian/changelog
@@ -1,3 +1,9 @@
+mmpython (0.2.0cvs20030806-freevo3) unstable; urgency=low
+
+  * Fixed Python 2.3 dependency (python >2.3 package doesn't exist)
+
+ -- Aubin Paul <debian@outlyer.org>  Thu,  7 Aug 2003 11:02:58 -0400
+
 mmpython (0.2.0cvs20030806-freevo2) unstable; urgency=low
 
   * Using dh_python
