New package built.
git-svn-id: svn://svn.freevo.org/kaa/trunk@233 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/debian/changelog
+++ b/mmpython/debian/changelog
@@ -1,3 +1,9 @@
+mmpython (0.2.0cvs20030826-freevo1) unstable; urgency=low
+
+  * New snapshot, includes preliminary m4a support
+
+ -- Aubin Paul <debian@outlyer.org>  Tue, 26 Aug 2003 17:03:55 -0400
+
 mmpython (0.2.0cvs20030806-freevo3) unstable; urgency=low
 
   * Fixed Python 2.3 dependency (python >2.3 package doesn't exist)
