Update for 0.4.4 release
git-svn-id: svn://svn.freevo.org/kaa/trunk@357 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/mmpython/debian/changelog
+++ b/mmpython/debian/changelog
@@ -1,3 +1,9 @@
+mmpython (0.4.4-freevo1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Aubin Paul <debian@outlyer.org>  Tue, 29 Jun 2004 20:07:11 -0400
+
 mmpython (0.4.2-freevo1) unstable; urgency=low
 
   * New upstream release
