--- a/evas/README
+++ b/evas/README
@@ -7,13 +7,11 @@ About
 kaa-evas is a python module for Evas, a canvas library written for the
 Enlightenment project.  This module is not complete. 
 
-kaa-evas requires CVS evas:
+kaa-evas requires evas >= 0.9.9.022:
 
    http://www.enlightenment.org/Enlightenment/Get_Enlightenment/index.html
 
-You can also use 0.9.9.011, if it's released:
-
-   http://enlightenment.freedesktop.org/ 
+The DirectFB support is broken in that release and not fixed in current cvs. 
 
 To use kaa-evas with X11, you will need kaa-display.  The only Evas engine
 kaa-evas supports natively is the buffer engine (and it is required for
