--- a/display/TODO
+++ b/display/TODO
@@ -15,3 +15,10 @@ other mpeg decoder based cards.
 
 Fix DirectFB Evas display. Please check if there is still a bug in
 evas and help fixing it.
+
+Create a REAME
+
+Every file needs a header and inline docs. Also correct the header to
+point to the correct AUTHORS file.
+
+Create doc in the Wiki and dump it into the doc subdir
