--- a/canvas/AUTHORS
+++ b/canvas/AUTHORS
@@ -6,7 +6,8 @@ Jason Tackaberry <tack@sault.org>
 
 Contributions:
 
-None
+Dirk Meyer <dischi@freevo.org>
+(DirectFB and Framebuffer support)
 
 
 Thanks to the people of the Enlightenment project
