--- a/metadata/TODO
+++ b/metadata/TODO
@@ -2,9 +2,7 @@ Dynamic loading without importing everything from __init__
 
 Make everything faster :)
 
-Add more types and information. This includes removing using PIL to
-support GIF and other image formats. Either create a gif parser or do
-not support gif at all. The PIL stuff is evil.
+Add more types and information.
 
 Move the XML parser from Python XML to libxml Python bindings. This is
 faster and this is also what other kaa modules use for XML.
