--- a/metadata/TODO
+++ b/metadata/TODO
@@ -10,3 +10,5 @@ Every file needs a header and inline docs. Also correct the header to
 point to the correct AUTHORS file.
 
 Create doc in the Wiki and dump it into the doc subdir
+
+Add list of external files kaa.vfs should know about
