--- a/metadata/AUTHORS
+++ b/metadata/AUTHORS
@@ -12,7 +12,8 @@ As founder of mmpython, he wrote many of the info parser modules.
 Aubin Paul <aubin@punknews.org>
 Lars Eggert (FreeBSD support)
 
-
+Richard Mottershead <richard.mottershead@v21net.co.uk>
+Games support
 
 This module is based on mmpython created by Thomas Schueppel and
 maintained by Thomas Schueppel and Dirk Meyer before it was renamed to
