Cleanup by using modules provied by kaa.base
git-svn-id: svn://svn.freevo.org/kaa/trunk@1175 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/TODO
+++ b/metadata/TODO
@@ -14,3 +14,6 @@ dir lib to serperate our code from external modules we just copy.
 Create doc in the Wiki and dump it into the doc subdir
 
 Add list of external files kaa.vfs should know about
+
+Move some code from mediainfo to media/core.py See image/core.py was
+example.
