update to missing utils file
git-svn-id: svn://svn.freevo.org/kaa/trunk@1386 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/TODO
+++ b/base/TODO
@@ -1,5 +1,4 @@
-Cleanup the lirc input module and move the getch functions from
-base/utils.py into the input submodule.
+Cleanup the lirc and stdin input modules.
 
 Remove unix signal handling code, it does not work right. Maybe auto
 catch SIG15 and send the normal sys.exit at this point.
