Add myself to AUTHORS file.
git-svn-id: svn://svn.freevo.org/kaa/trunk@2002 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/AUTHORS
+++ b/metadata/AUTHORS
@@ -3,6 +3,7 @@ The module is part of the Kaa Media Repository
 Maintainer of this module:
 
 Dirk Meyer <dischi@freevo.org>
+Jason Tackaberry <tack@urandom.ca>
 
 Contributions:
 
