prepare for first release
git-svn-id: svn://svn.freevo.org/kaa/trunk@2083 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/README
+++ b/metadata/README
@@ -1,1 +1,10 @@
 See http://www.freevo.org/kaa for more information
+
+Requirements:
+
+libxml2 and its python bindings
+kaa-base
+optional: libdvdread for DVD support
+
+
+License: GPL
