rename ChangeLog to NEWS and update it
git-svn-id: svn://svn.freevo.org/kaa/trunk@2576 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/NEWS
+++ b/metadata/NEWS
@@ -1,4 +1,5 @@
-0.6.1, released 2007/03/11
+0.6.1, not yet released
 
 * update mkv parser
 * update ogg parser to show bitrate as kbit/s
+* remove libxml2 dependency
