--- a/base/AUTHORS
+++ b/base/AUTHORS
@@ -2,12 +2,12 @@ The module is part of the Kaa Media Repository
 
 Maintainer of this module:
 
-Jason Tackaberry <tack@sault.org>
+Jason Tackaberry <tack@urandom.ca>
 Dirk Meyer <dischi@freevo.org>
 
 Contributions:
 
 Andreas Büsching <ab@bitkipper.net> 
-for the nf_generic notifier module which is also part of pyNotifier.
+for the pynotifier module
 
 Rob Shortt <rob@tvcentric.com>
