--- a/base/NEWS
+++ b/base/NEWS
@@ -1,6 +1,9 @@
+Release Notes, see ChangeLog for a detailed list of changes.
+
 0.1.3, not yet released
 
 * support for Python 2.5
 * remove libxml2 dependency and kaa.xml wrapper
 * add xmlutils
 * add svn2log ChangeLog generator
+* Bugfixes
