--- a/evas/README
+++ b/evas/README
@@ -29,9 +29,9 @@ Installation
 License
 -------
 
-This code is released under the GNU GPL version 2.  Read it here:
-                                                                                                                                   
-        http://www.gnu.org/licenses/gpl.html
+This code is released under the GNU Lesser GPL version 2.  Read it here:
+
+        http://www.gnu.org/licenses/lgpl.html
 
 
-   - Jason Tackaberry <tack@sault.org>
+   - Jason Tackaberry <tack@urandom.ca>
