--- a/cherrypy/TODO
+++ b/cherrypy/TODO
@@ -7,3 +7,7 @@ Every file needs a header and inline docs. Also correct the header to
 point to the correct AUTHORS file.
 
 Create doc in the Wiki and dump it into the doc subdir
+
+Remove kid support
+
+Add http://www.myghty.org support
