prepare bugfix release 0.7.1
git-svn-id: svn://svn.freevo.org/kaa/trunk@2927 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/NEWS
+++ b/metadata/NEWS
@@ -1,5 +1,10 @@
 Release Notes, see ChangeLog for a detailed list of changes.
 
+0.7.1, 2007-12-25
+
+* Bugfix to enable force on parse()
+
+
 0.7.0, 2007-12-22
 
 * Return date as timestamp (int) or userdate (str)
