--- a/metadata/NEWS
+++ b/metadata/NEWS
@@ -1,5 +1,11 @@
 Release Notes, see ChangeLog for a detailed list of changes.
 
+0.7.2, 2008-02-04
+
+* EXIF date updates
+* Improved VCD parser
+
+
 0.7.1, 2007-12-25
 
 * Bugfix to enable force on parse()
