Support to run a glib mainloop in an extra thread
git-svn-id: svn://svn.freevo.org/kaa/trunk@3140 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/NEWS
+++ b/base/NEWS
@@ -5,6 +5,8 @@ Release Notes, see ChangeLog for a detailed list of changes.
 * Again some API changes for kaa.notifier. Please read
   API_CHANGES.txt for details. The API should be stable now.
 * synchronized decorator
+* Support to run a glib mainloop in an extra thread
+
 
 0.3.0, 2008-02-04
 
