--- a/base/NEWS
+++ b/base/NEWS
@@ -1,6 +1,6 @@
 Release Notes, see ChangeLog for a detailed list of changes.
 
-0.4.0, 2008-xx-xx
+0.4.0, 2008-03-24
 
 * Again some API changes for kaa.notifier. Please read
   API_CHANGES.txt for details. The API should be stable now.
@@ -8,6 +8,9 @@ Release Notes, see ChangeLog for a detailed list of changes.
 * Support to run a glib mainloop in an extra thread
 * TLS socket support using tlslite
 * Multicast DNS service discovery support using Avahi Dbus bindings
+* Major improvements in the InProgress class and coroutine
+* kaa.Socket rewrite
+* Bugfixes
 
 
 0.3.0, 2008-02-04
