update list of authors
git-svn-id: svn://svn.freevo.org/kaa/trunk@3598 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/metadata/AUTHORS
+++ b/metadata/AUTHORS
@@ -9,15 +9,11 @@ Jason Tackaberry <tack@urandom.ca>
 Contributions:
 
 Thomas Schueppel <stain@acm.org>
-As founder of mmpython, he wrote many of the info parser modules.
-
 Aubin Paul <aubin@punknews.org>
-
+Duncan Webb <duncan@freevo.org>
+Hans Meine <hans_meine@gmx.net>
 Lars Eggert (FreeBSD support)
-
-Richard Mottershead <richard.mottershead@v21net.co.uk>
-Games support
-
+Richard Mottershead <richard.mottershead@v21net.co.uk> (games)
 Jose Taza <jose4freevo@chello.nl> (m4a parser)
 
 This module is based on mmpython created by Thomas Schueppel and
