Remove evas and DirectFB support. The evas support is outdated and may not even work with the latest version of evas, kaa.candy is based on clutter and not on evas anymore. The DirectFB support only worked when using evas, so no need for it anymore. This leaves X11, Framebuffer, and SDL support based on imlib2 and basic X11 window handling.
git-svn-id: svn://svn.freevo.org/kaa/trunk@3680 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/display/README
+++ b/display/README
@@ -1,7 +1,6 @@
 Low level support for various displays, such as X11 or
 framebuffer. Provides X11Display and X11Window classes for managing
 X11 windows, with optional support for Imlib2 (render Imlib2 images to
-X11 windows), Evas (both software and OpenGL canvases), and pygame
-(render Imlib2 images to pygame surfaces).
+X11 windows), and pygame (render Imlib2 images to pygame surfaces).
 
 See http://www.freevo.org/kaa for more information
