--- a/base/TODO
+++ b/base/TODO
@@ -1,7 +1,17 @@
-Check all files for the use of type(). It may not work with the config
-code, use isinstance instead. Also check the files for exception
-handling. Do not catch all exceptions and do something, add special
-handling for SystemExit and KeyboardInterrupt and call sys.exit() to
-make sure the app stops when pressing C-c.
+TODO before 1.0:
 
-Create doc in the Wiki and dump it into the doc subdir
+- Eliminate explicit type() checking.  Even isinstance() should be avoided
+  where possible, relying instead of duck typing.
+- Make sure SystemExit and KeyboardInterrupt is not silently caught.  They
+  should be bubbled up to the notifier loop.  In other words, do not
+  use catch-all except statements, but rather 'except Exception' (which
+  will not catch KeyboardInterrupt and SystemExit).
+- Remove getters and setters (in the form get_foo() and set_foo()), using
+  instead properties.  This will result in significant API breakage, but
+  is better to do that now than after 1.0 :)
+- Rewrite of Process class
+- Complete documentation
+
+
+TODO either before or after 1.0:
+- Unit testing suite (preferably before)
