Extend copyright dates to 2009; update TODO.
git-svn-id: svn://svn.freevo.org/kaa/trunk@3860 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/TODO
+++ b/base/TODO
@@ -1,18 +1,22 @@
 TODO before 1.0:
 
-- Eliminate explicit type() checking.  Even isinstance() should be avoided
-  where possible, relying instead of duck typing.
+- Remove getters and setters (in the form get_foo() and set_foo()), using
+  instead properties.  This will result in significant API breakage, but
+  is better to do that now than after 1.0 :)
+- Complete documentation
+
+
+DONE:
+- Rewrite of Process class
+- [?] Adjust kaa.distribution to not import anything from kaa itself. Right now
+  svn2log.py imports kaa.xmlutils
 - Make sure SystemExit and KeyboardInterrupt is not silently caught.  They
   should be bubbled up to the mainloop.  In other words, do not
   use catch-all except statements, but rather 'except Exception' (which
   will not catch KeyboardInterrupt and SystemExit).
-- Remove getters and setters (in the form get_foo() and set_foo()), using
-  instead properties.  This will result in significant API breakage, but
-  is better to do that now than after 1.0 :)
-- Rewrite of Process class
-- Complete documentation
-- Adjust kaa.distribution to not import anything from kaa itself. Right now
-  svn2log.py imports kaa.xmlutils
+
 
 TODO either before or after 1.0:
 - Unit testing suite (preferably before)
+- Eliminate explicit type() checking.  Even isinstance() should be avoided
+  where possible, relying instead of duck typing.
