--- a/metadata/NEWS
+++ b/metadata/NEWS
@@ -1,5 +1,12 @@
 Release Notes, see ChangeLog for a detailed list of changes.
 
+0.7.6, 2009-05-26
+
+* Experimental exiv2 based parser for all images
+* Enhance exception handling
+* Make parser more robust
+
+
 0.7.5, 2008-12-01
 
 * Fix DVD detection for discs with bad subtitle mastering
