Add a todo item, and fix a docstring typo.
git-svn-id: svn://svn.freevo.org/kaa/trunk@4140 a8f5125c-1e01-0410-8897-facf34644b8e

--- a/base/TODO
+++ b/base/TODO
@@ -1,6 +1,7 @@
 TODO before 1.0:
 ----------------
 
+- Fix places that raise ValueError when they should be raising TypeError
 - Complete documentation
 
 
